--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on Github at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - parsec == 3.1.11
+- containers == 0.5.10.2
 
 library:
   source-dirs: src
