--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,8 @@ dependencies:
 - base >= 4.7 && < 5
 - parsec == 3.1.11
 - containers == 0.5.10.2
+- transformers == 0.5.2.0
+- text
 
 library:
   source-dirs: src
